tests/ui/dyn-star/upcast.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/upcast.rs:3:12
   |
LL | #![feature(dyn_star)]
   |            ^^^^^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: `W` needs to have the same ABI as a pointer
  --> $DIR/upcast.rs:28:23
   |
LL |     let w: dyn* Foo = W(0);
   |                       ^^^^ `W` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `W`

error[E0277]: `dyn* Foo` needs to have the same ABI as a pointer
  --> $DIR/upcast.rs:30:23
   |
LL |     let w: dyn* Bar = w;
   |                       ^ `dyn* Foo` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `dyn* Foo`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
